fix deployment issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmsaleh.github.io/Food-Oeder-App",
+  "homepage": "https://ahmsaleh.github.io/SalehPortfolio",
   "name": "cleanfolio",
   "version": "0.1.0",
   "private": true,
