--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://ahmsaleh.github.io/SalehPortfolio",
-  "name": "cleanfolio",
+  "name": "SalehPortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
